--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-dom": "^19.2.0",
     "recharts": "^3.3.0",
     "react": "^19.2.0",
-    "@google/genai": "^1.27.0"
+    "@google/genai": "^1.27.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
